--- a/.gitignore
+++ b/.gitignore
@@ -54,10 +54,10 @@ hs_err_pid*
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
 # .idea/artifacts
-# .idea/compiler.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
+.idea/compiler.xml
+.idea/modules.xml
+.idea/*.iml
+.idea/modules
 # *.iml
 # *.ipr
 
